# django-provost

./: setup.cfg
example_project/: settings.py
