[metadata]
name = django-provost
version = 0.0.1
author = spaceCabbage, r00terAF23
author_email = spaceCabbage@no-reply.github.com
maintainer = spaceCabbage
maintainer_email = spaceCabbage@no-reply.github.com
description = The eventual succesor to Django-Gaurdian, WIP
long_description = file:README.md
url = https://github.com/spaceCabbage/django-provost
license = MIT
keywords = django provost gaurdian
classifiers = 
    Environment :: Web Environment
    Framework :: Django


[options]
include_package_data = true